[package]
name = "iflight_f7_play"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"


[dependencies]
cortex-m = "^0.6.0"
cortex-m-rt = "0.6.11"
embedded-hal = "0.2.3"
panic-rtt-core = {version="0.1.0", optional=true}
shared-bus = {version = "0.1.4", features = ["cortexm"] }


stm32f7 = {version = "0.10.0" , features = ["stm32f7x2"], optional = true }
#stm32f4xx-hal = { version =" 0.1.0", features = ["stm32f722", "rt"]}
#stm32f7xx-hal = { version = "0.1.0", features = ["stm32f722", "rt"], optional=true }
stm32f7xx-hal = { git = "https://github.com/stm32-rs/stm32f7xx-hal", features = ["stm32f722", "rt"], optional=true }


icm20689 = { git="https://github.com/tstellanova/icm20689" }

[features]
default = ["stm32f7x", "panic-rtt-core"]
stm32f7x = ["stm32f7", "stm32f7xx-hal"]
